--- a/docs/cg-tutor/开源软件.md
+++ b/docs/cg-tutor/开源软件.md
@@ -1,8 +1,8 @@
 # 开源软件
 
-- blender
-- krita
-- inkscape
-- gimp
-- shotcut
-- mineimator
+- [blender](https://www.blender.org/)
+- [krita](https://krita.org/zh/)
+- [inkscape](https://inkscape.org/)
+- [gimp](https://www.gimp.org/)
+- [shotcut](https://www.shotcut.org/)
+- [mineimator](https://www.mineimator.com/)
