--- a/docs/frontend/ts教程/学习网址.md
+++ b/docs/frontend/ts教程/学习网址.md
@@ -1,5 +1,13 @@
 # ts学习网站
 
+## 常用的库
+
+- typeorm
+- [typeorm-naming-stratgies](https://github.com/tonivj5/typeorm-naming-strategies)
+- [prisma](https://github.com/prisma/prisma)
+- [https://github.com/sequelize/sequelize](https://github.com/sequelize/sequelize)
+- [https://github.com/mikro-orm/mikro-orm](https://github.com/mikro-orm/mikro-orm)
+
 [https://ts.xcatliu.com/](https://ts.xcatliu.com/)
 
 [https://www.typescriptlang.org/](https://www.typescriptlang.org/)
