--- a/docs/frontend/others/做新媒体必备的43款工具，速来围观！.md
+++ b/docs/frontend/others/做新媒体必备的43款工具，速来围观！.md
@@ -13,13 +13,13 @@ description:
 
 
 
-# 做新媒体必备的43款工具，速来围观！
+## 做新媒体必备的43款工具，速来围观
 
 篱笆屋里的程序媛 2017-08-15 13:13:50
 
 放一张我珍藏已久的**优秀运营者必备工具图**，做运营的人可以先存起来哦！![做新媒体必备的43款工具，速来围观！](http://p3.pstatp.com/large/32120002001a1b00b5c7)
 
-# 1、文档写作与协作工具。
+## 1、文档写作与协作工具
 <!--more-->
 **石墨文档**
 
@@ -39,7 +39,7 @@ WPS云文档 协作在云端
 
 ![做新媒体必备的43款工具，速来围观！](http://p1.pstatp.com/large/31fc00036ce300717aae)
 
-# 2、思维导图工具
+## 2、思维导图工具
 
 **Xmind**
 
@@ -53,7 +53,7 @@ XMind: The Most Popular Mind Mapping Software on The Planet.
 
 ![做新媒体必备的43款工具，速来围观！](http://p3.pstatp.com/large/3212000216243d0e4994)
 
-# 3、新媒体排行以及素材整理工具
+## 3、新媒体排行以及素材整理工具
 
 **新榜**
 
@@ -85,7 +85,7 @@ XMind: The Most Popular Mind Mapping Software on The Planet.
 
 ![做新媒体必备的43款工具，速来围观！](http://p1.pstatp.com/large/31fc0003722581c70a78)
 
-# 4、文章排版工具
+## 4、文章排版工具
 
 **135编辑器**
 
@@ -117,7 +117,7 @@ XMind: The Most Popular Mind Mapping Software on The Planet.
 
 ![做新媒体必备的43款工具，速来围观！](http://p3.pstatp.com/large/320a00036a44c20beb6a)
 
-# 5、制图与修图工具
+## 5、制图与修图工具
 
 **创客贴**
 
@@ -137,7 +137,7 @@ XMind: The Most Popular Mind Mapping Software on The Planet.
 
 ![做新媒体必备的43款工具，速来围观！](http://p9.pstatp.com/large/31fc000376248255869f)
 
-# 6、HTML5制作工具
+## 6、HTML5制作工具
 
 **易企秀**
 
@@ -157,7 +157,7 @@ MAKA官网_免费H5页面制作工具_微场景_移动营销_h5论坛
 
 ![做新媒体必备的43款工具，速来围观！](http://p1.pstatp.com/large/320f0004304a4e39d64e)
 
-# 7、图像截取工具
+## 7、图像截取工具
 
 **Snipaste**
 
@@ -171,7 +171,7 @@ FastStone Capture
 
 ![做新媒体必备的43款工具，速来围观！](http://p9.pstatp.com/large/321200021ff5c40dd961)
 
-# 8、二维码制作工具
+## 8、二维码制作工具
 
 **草料二维码**
 
@@ -185,7 +185,7 @@ FastStone Capture
 
 ![做新媒体必备的43款工具，速来围观！](http://p3.pstatp.com/large/322b0001dae690f97523)
 
-# 9、GIF制作工具
+## 9、GIF制作工具
 
 **GifCam**
 
@@ -193,7 +193,7 @@ GifCam
 
 ![做新媒体必备的43款工具，速来围观！](http://p9.pstatp.com/large/322b0001dc24fdf9adcb)
 
-# 10、短连接生成工具
+## 10、短连接生成工具
 
 **百度短网址**
 
@@ -207,7 +207,7 @@ GifCam
 
 ![做新媒体必备的43款工具，速来围观！](http://p1.pstatp.com/large/321200022497ff1c373a)
 
-# 11、语音转文字工具
+## 11、语音转文字工具
 
 **讯飞听见**
 
@@ -215,7 +215,7 @@ GifCam
 
 ![做新媒体必备的43款工具，速来围观！](http://p3.pstatp.com/large/322900016a91675c63c6)
 
-# 12、数据统计工具
+## 12、数据统计工具
 
 **考拉新媒助手**
 
@@ -241,7 +241,7 @@ GifCam
 
 ![做新媒体必备的43款工具，速来围观！](http://p3.pstatp.com/large/32140004546c18a396d7)
 
-# 13、社群管理工具
+## 13、社群管理工具
 
 **小U管家**
 
@@ -257,7 +257,7 @@ GifCam
 
 ![做新媒体必备的43款工具，速来围观！](http://p1.pstatp.com/large/322900016ed137e4a429)
 
-# 14、内容沉淀工具
+## 14、内容沉淀工具
 
 **麦克CRM**
 
