--- a/docs/java-tutor/服务器配置/环境变量配置(5种方法).md
+++ b/docs/java-tutor/服务器配置/环境变量配置(5种方法).md
@@ -8,7 +8,7 @@
 - 用户名：uusama
 - 需要配置MySQL环境变量路径：/home/uusama/mysql/bin
 
-### Linux读取环境变量
+## Linux读取环境变量
 
 读取环境变量的方法：
 
@@ -42,7 +42,7 @@ uusama@ubuntu:~$ echo $PATH
 export PATH=$PATH:<PATH 1>:<PATH 2>:<PATH 3>:------:<PATH N>
 ```
 
-### Linux环境变量配置方法一：`export PATH`
+## Linux环境变量配置方法一：`export PATH`
 
 使用`export`命令直接修改`PATH`的值，配置MySQL进入环境变量的方法:
 
@@ -60,7 +60,7 @@ export PATH=$PATH:/home/uusama/mysql/bin
 - 生效范围：仅对当前用户有效
 - 配置的环境变量中不要忘了加上原来的配置，即`$PATH`部分，避免覆盖原来配置
 
-### Linux环境变量配置方法二：`vim ~/.bashrc`
+## Linux环境变量配置方法二：`vim ~/.bashrc`
 
 通过修改用户目录下的`~/.bashrc`文件进行配置：
 
@@ -78,7 +78,7 @@ export PATH=$PATH:/home/uusama/mysql/bin
 - 生效范围：仅对当前用户有效
 - 如果有后续的环境变量加载文件覆盖了`PATH`定义，则可能不生效
 
-### Linux环境变量配置方法三：`vim ~/.bash_profile`
+## Linux环境变量配置方法三：`vim ~/.bash_profile`
 
 和修改`~/.bashrc`文件类似，也是要在文件最后加上新的路径即可：
 
@@ -96,7 +96,7 @@ export PATH=$PATH:/home/uusama/mysql/bin
 - 生效范围：仅对当前用户有效
 - 如果没有`~/.bash_profile`文件，则可以编辑`~/.profile`文件或者新建一个
 
-### Linux环境变量配置方法四：`vim /etc/bashrc`
+## Linux环境变量配置方法四：`vim /etc/bashrc`
 
 该方法是修改系统配置，需要管理员权限（如root）或者对该文件的写入权限：
 
@@ -116,7 +116,7 @@ export PATH=$PATH:/home/uusama/mysql/bin
 - 生效期限：永久有效
 - 生效范围：对所有用户有效
 
-### Linux环境变量配置方法五：`vim /etc/profile`
+## Linux环境变量配置方法五：`vim /etc/profile`
 
 该方法修改系统配置，需要管理员权限或者对该文件的写入权限，和`vim /etc/bashrc`类似：
 
@@ -136,7 +136,7 @@ export PATH=$PATH:/home/uusama/mysql/bin
 - 生效期限：永久有效
 - 生效范围：对所有用户有效
 
-### Linux环境变量配置方法六：`vim /etc/environment`
+## Linux环境变量配置方法六：`vim /etc/environment`
 
 该方法是修改系统环境配置文件，需要管理员权限或者对该文件的写入权限：
 
