add recommend links

--- a/docs/java-tutor/面试题.md
+++ b/docs/java-tutor/面试题.md
@@ -12,7 +12,7 @@
 - [https://www.developers.pub/wiki/1002310/](https://www.developers.pub/wiki/1002310/)
 - [https://bugstack.cn/](https://bugstack.cn/)
 - [http://springboot.fun/](http://springboot.fun/)
-- ​CS-Notes    [http://www.cyc2018.xyz/](http://www.cyc2018.xyz/)
+- ​[CS-Notes](http://www.cyc2018.xyz/) [github地址](https://github.com/CyC2018/cs-notes)
 - [java面试进阶](https://www.yuque.com/docs/share/f37fc804-bfe6-4b0d-b373-9c462188fec7)
 - [awesome-cs](https://github.com/CodingDocs/awesome-cs#%E6%95%B0%E6%8D%AE%E5%BA%93%E5%9F%BA%E7%A1%80)
 - [30秒java8](https://github.com/biezhi/30-seconds-of-java8#anagrams)
