update python docs

--- a/docs/frontend/vue-tutor/1.vue2-tutor.md
+++ b/docs/frontend/vue-tutor/1.vue2-tutor.md
@@ -49,6 +49,10 @@ vue create your-app
 vue ui  //使用可视化界面配置项目
 ```
 
+#### 添加webpack插件
+
+比如...
+
 ### 使用vite开发
 
 [Vite](https://github.com/vitejs/vite) 是一个 web 开发构建工具，由于其原生 ES 模块导入方式，可以实现闪电般的冷服务器启动。
